# ruokabotti-rs

./: Cargo.toml  README.md  database.md  database.sql
.github/workflows/: build.yml
src/: main.rs
src/commands/: admin.rs  food.rs  foodstats.rs  image.rs  image_provider_msg.rs  kuva.rs  mod.rs  reactions.rs  ruoka.rs  ruokastats.rs  update_ruokadb.rs  viikko.rs  week.rs
src/database/: add_food.rs  arvio.rs  fetch_food.rs  foodimage.rs  lisaa_ruoka.rs  mod.rs  nouda_ruoka.rs  rating.rs  ruokakuva.rs
src/util/: dayconvert.rs  mod.rs  parse_lykeion.rs
