[package]
name = "ruokabotti-rs"
version = "0.1.0"
edition = "2018"
authors = ["Luukas Pörtfors <lajp@iki.fi>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
version = "*"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.reqwest]
version = "*"
default-features = false
features = ["blocking"]

[dependencies.sqlx]
version = "*"
features = ["runtime-tokio-rustls", "mysql"]

[dependencies]
regex = {version = "*", features = ["default"]}
dotenv = "*"
tracing = "*"
tracing-subscriber = "*"
futures = "*"
chrono = "*"
